<resources>
    <string name="app_name">Budget Planner</string>
    <string name="choose_your_default_currency">Choose your default currency</string>
    <string name="search_here">Search</string>
    <string name="next">Next</string>
    <string name="expenses">EXPENSES</string>
    <string name="income">INCOME</string>
    <string name="total">Total</string>
    <string name="npr">NPR</string>
    <string name="comment">Comment</string>
    <string name="nrs">NRs %1$d</string>
    <string name="delete">DELETE</string>
    <string name="amount">Amount</string>
    <string name="category">Category</string>
    <string name="day">Day</string>
    <string name="date">Date</string>
    <string name="save">Save</string>
    <string name="edit_trx">Edit Transaction</string>
    <string name="no_expenses">No Expenses Found !</string>
    <string name="no_income">No Income Found !</string>
    <string name="trx_day">DATE OF TRANSACTION</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="reminders">Reminders</string>
    <string name="currency">Currency</string>
    <string name="settings">Settings</string>
    <string name="share_with_friends">Share with friends</string>
    <string name="rate_the_app">Rate the app</string>
    <string name="converter">Converter</string>
    <string name="select_currency">Select Currency</string>
    <string name="currency_converter">Currency Converter</string>
    <string name="default_currency">Default Currency</string>
    <string name="pin">PIN</string>
    <string name="search">Search</string>
    <string name="no_data_found">No Data Found !!</string>
    <string name="transaction_date">Transaction Date</string>
    <string name="export_data_as">Export data as:</string>
    <string name="export">EXPORT</string>
    <string name="PIN">PIN</string>
    <string name="you_can_set_pin">You can set a 4-digit PIN to log in to the app</string>
    <string name="set_pin">Set PIN</string>
    <string name="verify_transaction">Verify Transaction</string>
    <string name="cancel_keyboard">Cancel</string>
    <string name="forgot_wallet_pin">FORGOT WALLET PIN?</string>
    <string name="touch_the_fingerprint_sensor">Touch the fingerprint sensor</string>
    <string name="currency_conversion_format">1 %1$s = %2$.2f %3$s</string>
    <string name="pin_must_be_of_four_digit">PIN must be of four digit</string>
    <string name="error_message_here">Error message here</string>
    <string name="choose_a_pin">Choose a PIN</string>
    <string name="re_enter_pin">Re-enter your PIN</string>
    <string name="remove_pin">Remove PIN</string>
    <string name="please_enter_pin_continue">Please enter your PIN to continue</string>
    <string name="now_you_have_to">Now you have to use PIN to login to app</string>
    <string name="change_pin">Change PIN</string>
    <string name="you_must_enter_curr">You must enter your current PIN to change it</string>
    <string name="choose_a_new_pin">Choose a new PIN</string>
    <string name="you_must_enter_curr_delete">You must enter your current PIN to delete it</string>
    <string name="invalid_amount">Invalid Amount</string>
    <string name="sign_up">Sign up</string>
    <string name="budget_planner">Budget Planner</string>
    <string name="good_morning">Good Morning</string>
    <string name="good_afternoon">Good Afternoon</string>
    <string name="good_evening">Good Evening</string>
    <string name="create">CREATE</string>
    <string name="create_reminder">Create Reminder</string>
    <string name="reminder_name">Reminder Name</string>
    <string name="reminder">Reminder</string>
    <string name="time">Time</string>
    <string name="select_day">Select Day</string>
    <string name="edit_reminder">Edit Reminder</string>

</resources>