<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <include
        android:id="@+id/toolbar"
        layout="@layout/generic_toolbar"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_reminder_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/_10sdp"
       >


        <com.google.android.material.textfield.TextInputLayout
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/_2sdp"
            android:id="@+id/input_reminder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:textColorHint="@color/lightGrey"
            android:hint="@string/reminder_name"
            app:hintTextColor="@color/lightGrey"
            app:boxStrokeWidth="1dp"
            app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
            app:hintAnimationEnabled="false"
            tools:ignore="PrivateResource">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editinputReminder"
                android:textColor="@color/white"
                android:paddingStart="0dp"
                android:focusableInTouchMode="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:elevation="0dp"
                android:backgroundTint="@color/white"
                tools:ignore="RtlSymmetry" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/BudgetPlanStyle.Body1"
            android:text="@string/day"
            android:textColor="@color/lightGrey"
            app:layout_constraintTop_toBottomOf="@id/input_reminder"
            android:layout_marginTop="@dimen/_30sdp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="@dimen/_10sdp" />


        <TextView
            android:layout_marginTop="@dimen/_4sdp"
            android:id="@+id/day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="November 4, 2023"
            android:textSize="@dimen/_14sdp"
            style="@style/BudgetPlanStyle.H1"
            android:textColor="@color/interest_green_color"
            app:layout_constraintTop_toBottomOf="@id/tv_day"
            app:layout_constraintStart_toStartOf="@id/tv_day" />



        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/BudgetPlanStyle.Body1"
            android:text="@string/time"
            android:textColor="@color/lightGrey"
            app:layout_constraintTop_toBottomOf="@id/day"
            android:layout_marginTop="@dimen/_30sdp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="@dimen/_10sdp" />


        <TextView
            android:layout_marginTop="@dimen/_4sdp"
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="16:48"
            android:textSize="@dimen/_14sdp"
            style="@style/BudgetPlanStyle.H1"
            android:textColor="@color/interest_green_color"
            app:layout_constraintTop_toBottomOf="@id/tv_time"
            app:layout_constraintStart_toStartOf="@id/tv_time" />




        <com.google.android.material.textfield.TextInputLayout
            app:layout_constraintTop_toBottomOf="@id/time"
            android:layout_marginTop="@dimen/_2sdp"
            android:id="@+id/input_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:textColorHint="@color/lightGrey"
            android:hint="@string/comment"
            app:hintTextColor="@color/lightGrey"
            app:boxStrokeWidth="1dp"
            app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
            app:hintAnimationEnabled="false"
            tools:ignore="PrivateResource">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editComment"
                android:textColor="@color/white"
                android:paddingStart="0dp"
                android:focusableInTouchMode="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:elevation="0dp"
                android:backgroundTint="@color/white"
                tools:ignore="RtlSymmetry" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/proceedStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="@dimen/_200sdp"
        android:background="@drawable/boundry_proceed_disabled"
        android:layout_height="@dimen/_40sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/_20sdp">

        <TextView
            android:id="@+id/addText"
            android:textColor="@color/disabled_text"
            style="@style/BudgetPlanStyle.Body1"
            android:text="@string/create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>