<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.HomeScreenActivity">

    <View
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_120sdp"
        android:background="@drawable/bottom_corner_bg" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_total_amount"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/bag_icon"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/img_money_bag"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:textColor="@color/white"
            android:id="@+id/tv_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/BudgetPlanStyle.VolteSemiBold16"
            android:text="@string/total"
            app:layout_constraintLeft_toRightOf="@id/bag_icon"
            android:layout_marginLeft="@dimen/_5sdp"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/drop_down"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/drop_down"
           app:layout_constraintStart_toEndOf="@id/tv_total"
            android:layout_marginLeft="@dimen/_5sdp"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:textColor="@color/white"
            android:id="@+id/total_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/BudgetPlanStyle.VolteSemiBold20"
            android:text="NRS 0"
            app:layout_constraintStart_toStartOf="@id/bag_icon"
            app:layout_constraintEnd_toEndOf="@id/drop_down"
            app:layout_constraintTop_toBottomOf="@id/bag_icon"
            android:layout_marginTop="@dimen/_3sdp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/BudgetPlanStyle.VolteSemiBold16"
        android:textColor="@color/white"
        android:text="There were no expenses this week"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
        android:id="@+id/add_icon"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:src="@drawable/add_icon" />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_total_amount"
        app:elevation="0dp"
        android:layout_marginTop="@dimen/_10sdp">


        <com.google.android.material.tabs.TabLayout
            android:background="@null"
            android:id="@+id/tab_layout_income_expenses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:tabGravity="fill"
            app:tabIndicator="@drawable/ic_tab_indicator_selected"
            app:tabIndicatorFullWidth="false"
            app:tabMode="fixed"
            app:tabSelectedTextColor="@color/white"
            app:tabTextColor="@color/lightGrey"
            app:tabTextAppearance="@style/BudgetPlanStyle.VolteSemiBold20">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expenses" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/income"/>

        </com.google.android.material.tabs.TabLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_90sdp"
        tools:listitem="@layout/item_each_record"
        android:id="@+id/rvRecords"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cl_total_amount"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>