<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkBackground"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:ignore="ContentDescription">

    <include
        android:visibility="visible"
        android:id="@+id/toolbarPin"
        layout="@layout/generic_toolbar"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/pinLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/desc"
            style="@style/BudgetPlanStyle.SemiBold20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="@dimen/_72sdp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:gravity="center_horizontal"
            android:text="Good morning"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.542"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_error"
            style="@style/BudgetPlanStyle.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:gravity="center_horizontal"
            tools:text="@string/verify_transaction"
            android:visibility="visible"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/desc" />

        <com.swifttechnology.imepay.Views.Utils.CirclePinEdittext.CirclePinField
            android:id="@+id/walletPinEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSelectHandle="@drawable/text_handle"
            android:textSize="@dimen/_12sdp"
            app:circleRadius="@dimen/_7sdp"
            app:distanceInBetween="@dimen/_10sdp"
            app:fillerColor="#00CCCC"
            app:fillerRadius="@dimen/_7sdp"
            app:layout_constraintBottom_toTopOf="@+id/keyboard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_error"
            app:layout_constraintVertical_bias="0.3"
            app:lineThickness="@dimen/_2sdp"
            app:noOfFields="4" />

        <com.gaurav.budgetplanner.Utils.CustomPinKeyboard
            android:id="@+id/keyboard"
            android:layout_width="0dp"
            android:layout_height="@dimen/_220sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/tv_forget_wallet_pin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_forget_wallet_pin"
            style="@style/BudgetPlanStyle.Button"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_14sdp"
            android:text="@string/forgot_wallet_pin"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toTopOf="@+id/tv_version"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_version"
            android:visibility="invisible"
            style="@style/BudgetPlanStyle.Button"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:text="Version 3.0.4(139)"
            android:textColor="@color/black_opacity_32"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:id="@+id/fingerprintBottomSheet"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        android:background="@drawable/top_corner_bg"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RelativeLayout
            android:id="@+id/ln_fingerLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/tv_usePIN"
            android:layout_below="@id/fingerTitle"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/iv_fingerprintIcon"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_centerInParent="true"
                android:padding="8dp" />

            <com.gaurav.budgetplanner.Utils.CustomTextFormat.RobotoRegularTextView
                android:id="@+id/tv_fingerprintMesz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_fingerprintIcon"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:paddingLeft="24dp"
                android:text="@string/touch_the_fingerprint_sensor"
                android:textSize="14sp" />
        </RelativeLayout>

        <com.gaurav.budgetplanner.Utils.CustomTextFormat.RobotoMediumTextView
            android:id="@+id/fingerTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:paddingLeft="24dp"
            android:paddingRight="@dimen/gen24dp"
            android:text="Verify Transaction!"
            android:textColor="@color/text_color_dark"
            android:textSize="20sp" />

        <com.gaurav.budgetplanner.Utils.CustomTextFormat.RobotoMediumTextView
            android:id="@+id/tv_usePIN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:padding="24dp"
            android:text="Use PIN"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary" />

        <com.gaurav.budgetplanner.Utils.CustomTextFormat.RobotoMediumTextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:padding="24dp"
            android:text="Cancel"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>